--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script src="index.js" defer></script>
 </head>
-<body>
+<body style="width: 100vw;height: 100vh;margin: 0;">
 
 </body>
 </html>
